--- a/front/style.css
+++ b/front/style.css
@@ -1,3 +1,30 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
+body{
+    background-image:url('imagenes/fondo\ peliculas.jpg');
+     /* Ajusta la imagen para que cubra todo el fondo */
+    background-position: center; /* Centra la imagen */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    
+    
+}
+
+.cheflix{
+    text-align: center;
+    font-family: "Black Ops One", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  margin-top: 10%;
+  margin-bottom: 0px;
+  padding: 0%;
+    
+}
+.texto-cheflix{
+    color: rgb(247, 250, 253, 0.5);
+    font-size: 100px;
+  
+}
+
 main{
     margin-top: 10%;
 }
@@ -14,11 +41,10 @@ main{
     flex-direction: row;
     overflow-x: auto; 
     white-space: nowrap;  Evita que las imágenes se envuelvan */
-    background-color: #3b0101;
+   
     display: flex;
     flex-wrap: wrap;
-    justify-content:space-evenly;
-    position: relative;
+  
   width: 1160px;
   display: flex;
   justify-content: center;
@@ -32,54 +58,72 @@ main{
     
   .contenedorHijo img{
     width: 150px;
-    height: auto;
+    height: 200px;
     margin-top: 20px;
-
-  }
-
-  .imagen {
-    width: 100%;
     border-radius: 5px;
-    transition: transform 0.3s ease; /* Agregamos una transición suave */
-  }
-  
-  .imagen:hover {
-    transform: scale(1.5); /* Escalamos la imagen al 110% del tamaño original */
-  }
-  .contenedorHijo2:hover {
-    transform: scale(1.5); /* Escalamos la imagen al 110% del tamaño original */
+
   }
 
-.contenedorHijo2{
+  .tituloForm{
+    font-size: 15px;
+  }
+
+  
+/*.contenedorHijo2{
     font-size: 10px;
     text-align: center;
     color: aliceblue;
     
 
+}*/
+
+.contenedorTarjeta{
+    display: flex;
+    justify-content: center;
+ border: 2px solid rgb(145, 30, 22) ;
+   height: 500px;
+    width: 300px;
+    margin-bottom: 15%;
 }
 
 
-  /**/
+.contenedorTarjeta2{
+
+color: #fff;
+height: 300px;
+}
+.contenedorTarjeta2:hover {
+    transform: scale(1.3);
+}
+
+
+/*.contenedorHijo{
+    
+}
+  
   .container .contenedorForm:hover .tituloForm p {
     transform: translateY(0px);
-  }
+  }*/
 
-
+  
 .div-header ul{
-    display: flex;
+   display: flex;
     flex-wrap: wrap;
-    text-align: center;
+    
     flex-direction: row;
     justify-content:space-evenly;
     list-style:none ;
+    height: 30px;
+   
+    
 }
 
-#header{
-
-}
 .div-header a{
-    color: black;
+    color: rgb(252, 249, 249);
     text-decoration: none;
+    font-size: 50px;
+    
+   
     
 }
 a:hover {
@@ -87,4 +131,43 @@ a:hover {
 }
 
 
+.navbar {
+   
+    color: #fff;
+    padding: 0px 10px;
+    width: 20px;
+    height: auto;
+    text-align: center;
+    margin-top: 10px;
+    display:table-cell;
+}
+
+.toggle-btn {
+    cursor: pointer;
+}
+
+.panel a{ 
+    font-size: 30px;
+    
+}
+.panel {
+    display: flex;
+    width: 100px;
+    border: 1px,solid,  red;
+    
+    
+    top: 50px;
+    right: 20px;
+    text-align: center;
+    border: 1px, solid, red;
+    color: #fff;
+    padding: 10px;
+}
+
+.panel a {
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    margin-bottom: 10px;
+}
 
