--- a/front/style.css
+++ b/front/style.css
@@ -80,7 +80,7 @@ main{
 .contenedorTarjeta{
     display: flex;
     justify-content: center;
- border: 2px solid rgb(145, 30, 22) ;
+ border: 3px solid rgb(139, 0, 0) ;
    height: 500px;
     width: 300px;
     margin-bottom: 15%;
@@ -127,7 +127,7 @@ height: 300px;
     
 }
 a:hover {
-    color: red;
+    color: rgb(44, 247, 128);
 }
 
 
@@ -171,3 +171,33 @@ a:hover {
     margin-bottom: 10px;
 }
 
+
+
+
+.form-control{
+  width: 15px;
+}
+
+header{
+  width: 100%;
+  
+}
+.navbar {
+  list-style:none ;
+  color: #fff;
+  font-size: 30px;
+ 
+  
+}
+
+.navbar a{
+
+  color: #fff;
+}
+.nav-link:hover {
+  transform: scale(1.1);
+  
+}
+.navbar a:hover{
+  color: rgb(139, 0, 0) ;
+}
