--- a/front/style.css
+++ b/front/style.css
@@ -7,6 +7,15 @@ body{
     background-repeat: no-repeat; /* Evita que la imagen se repita */
     
     
+      margin: 0;
+      padding: 0;
+    
+      background-size: cover;
+      background-position: center;
+      height: 100%;
+ 
+  
+    
 }
 
 .cheflix{
